--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div id="detalles">
                 <div class="contenido">
-                    <h1>¿Cómo se calcula?</h1>
+                    <h1 style="color:azure";>¿Cómo se calcula?</h1>
                     <ul>
                         <li>De 0kg a 10kg, se calcula 100cc por cada kilo.</li>
                         <li>Se suman 50cc por cada kilo de peso por arriba de 10kg, hasta 20kg.</li>
